add scrollable menu and test combat button